# vibetools

./: .gitignore  CLAUDE.md  README.md  VibeBoardProductDesignDoc.md  install.sh  pyproject.toml  vibe.zsh
VibeBoard/: .gitignore  Info.plist  Package.swift  SPIKE.md  VibeBoard.entitlements  build-app.sh
VibeBoard/Sources/FSEventsSpike/: main.swift
VibeBoard/Sources/VibeBoard/: MenuBarContentView.swift  NotificationManager.swift  ProjectTag.swift  TicketWindowView.swift  VibeBoardApp.swift
VibeBoard/Sources/VibeBoardCore/: FSEventsWatcher.swift  GitContext.swift  ProjectColor.swift  ResumeCommand.swift  Ticket.swift  TicketParser.swift  TicketStore.swift  TicketWriter.swift
VibeBoard/Tests/VibeBoardCoreTests/: ParserTests.swift  ProjectColorTests.swift  StoreTests.swift  WriterTests.swift
docs/: nsproject-park-integration-plan.md  nsproject-park.md  vibeboard-format.md
skills/deliver/: SKILL.md  deliver-mac-app
skills/linear-cli/: SKILL.md
skills/park/: SKILL.md
skills/peekaboo/: SKILL.md
skills/sentry/: SKILL.md
tests/: __init__.py  conftest.py  test_cleanup.py  test_cli_integration.py  test_connection.py  test_git_ops.py  test_nsproject.py  test_platform.py  test_resume.py  test_target.py  test_tickets.py
vibe/: __init__.py  __main__.py  cleanup.py  cli.py  config.py  connection.py  git_ops.py  nsproject.py  platform.py  target.py  tickets.py  utils.py
vm-setup/: Claude.md  README.md  claude-wrapper.zsh  codex-wrapper.zsh  zshrc
vm-setup-windows/: Claude.md  README.md  claude-wrapper.zsh  codex-wrapper.zsh  p10k.zsh  zshrc
vm-setup/PermissionAutoResponder.app/Contents/: Info.plist
(+4 files in other folders)
